--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ dark-theme: auto
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: https://my.visualcv.com/anurag-gautam/
 
 url: https://angautam.github.io
 # your url: https://USERNAME.github.io
@@ -34,12 +34,12 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-instagram: myinstagram
-linkedin: mylinkedin
-github: mygithub
-email: myemail@gmail.com
+# facebook: myfacebook
+# twitter: mytwitter
+# instagram: myinstagram
+linkedin: anuraggtm
+github: angautam
+email: anurag.gtm@gmail.com
 
 authors:
   johndoe:
