--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ url: https://angautam.github.io
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'G-2YC21NN4NW'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
@@ -42,9 +42,9 @@ github: angautam
 email: anurag.gtm@gmail.com
 
 authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+  anuraggautam:
+    name: Anurag Gautam
+    bio: Platform SRE who is exploring the cloud native world!
     external-image: false
     picture: assets/images/profile.jpg
     twitter: johndoe
